picture overflow fixed

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -7,7 +7,7 @@ body nav{
     width: 100%;
     margin-bottom: 0spx;
     font-weight: bold;
-    box-shadow: 0px 2px 50px;
+    box-shadow: 0px 5px 20px black;
     z-index: 100;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
