--- a/css/startscreenFading.css
+++ b/css/startscreenFading.css
@@ -1,3 +1,10 @@
 #fadingpicture{
     opacity: 1;
+    position: absolute; 
+    z-index: 1000; 
+    top: 0px; 
+    left: 0px; 
+    max-width: 100%; 
+    max-height: 100%; 
+    object-fit: fill;
 }
