--- a/css/texts.css
+++ b/css/texts.css
@@ -1,5 +1,5 @@
 .introductionText{
-    font-size: 3rem;
+    font-size: 3em;
     text-align: center;
 }
 
